--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "Quick info about frequency of your words in the text",
     "version": "0.0.1",
     "publisher": "AnelGroup",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mIkhail-zaretsky/word-stats"
+    },
     "engines": {
         "vscode": "^1.28.0"
     },
