--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "word-stats",
     "displayName": "Word Statistics for text",
     "description": "Quick info about frequency of your words in the text",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "publisher": "AnelGroup",
     "repository": {
         "type": "git",
@@ -15,16 +15,29 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.calculateWordStats"
+        "onCommand:extension.calculateWordStats",
+        "onCommand:extension.calculateFolderWordStats"
     ],
     "main": "./out/extension",
     "contributes": {
         "commands": [
             {
                 "command": "extension.calculateWordStats",
-                "title": "Calculate word stats"
+                "title": "Calculate word stats (current file)"
+            },
+            {
+                "command": "extension.calculateFolderWordStats",
+                "title": "Calculate word stats (folder)"
             }
-        ]
+        ],
+        "menus": {
+            "explorer/context": [
+                {
+                    "when": "explorerResourceIsFolder == true",
+                    "command": "extension.calculateFolderWordStats"
+                }
+            ]
+        }
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
