--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^3.1.6",
-        "vscode": "^1.1.22",
-        "tslint": "^5.11.0",
-        "@types/node": "^10.12.10",
-        "@types/mocha": "^5.2.5"
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^10.14.19",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.3",
+        "vscode": "^1.1.36"
     }
 }
